refactored assimilation fail chances into a var

--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -1122,11 +1122,11 @@
 	living_standard_tec_assimilation_test_tooltip_delayed:0 "TEST TOOLTIP DELAYED"
 
 	living_standard_tec_assimilation_remove_hivemind:0 "$living_standard_deassimilation$"
-	living_standard_tec_assimilation_remove_hivemind_tooltip:0 "$living_standard_deassimilation_tooltip$\n\n$tec_loc_assimilation_type_remove_hive$\n$tec_loc_assimilation_fail_15$"
+	living_standard_tec_assimilation_remove_hivemind_tooltip:0 "$living_standard_deassimilation_tooltip$\n\n$tec_loc_assimilation_type_remove_hive$\n$tec_loc_assimilation_fail_10$"
 	living_standard_tec_assimilation_remove_hivemind_tooltip_delayed:0 "§LThe sense of individuality may be extremely painful for creatures biologically evolved to be part of a collective, but the experience will be only temporary, as an universe of self-thoughts awaits.§!"
 
 	living_standard_tec_assimilation_add_hivemind:0 "$living_standard_ego_assimilation$"
-	living_standard_tec_assimilation_add_hivemind_tooltip:0 "This species is being integrated both physically and mentally with the §YHivemind§!.\n\n$tec_loc_assimilation_type_add_hive$\n$tec_loc_assimilation_fail_15$"
+	living_standard_tec_assimilation_add_hivemind_tooltip:0 "This species is being integrated both physically and mentally with the §YHivemind§!.\n\n$tec_loc_assimilation_type_add_hive$\n$tec_loc_assimilation_fail_10$"
 	living_standard_tec_assimilation_add_hivemind_tooltip_delayed:0 "§LThe sense of self does not survive the process, instead the fulfillment of being part of something bigger, being part of a collective, is born.§!"
 
 	living_standard_tec_assimilation_add_hivemind_psionic:0 "$living_standard_ego_assimilation$"
@@ -1134,23 +1134,23 @@
 	living_standard_tec_assimilation_add_hivemind_psionic_tooltip_delayed:0 "§LThe sense of self does not survive the process, instead the fulfillment of being part of something bigger, being part of a collective, is born.§!"
 
 	living_standard_tec_assimilation_unify_robots:0 "Mechanical Rearrangement"
-	living_standard_tec_assimilation_unify_robots_tooltip:0 "This robotic species is being recycled into an main template §BMechanical Unit§!.\n\n$tec_loc_assimilation_type_cybernetic$\n$tec_loc_assimilation_fail_15$"
+	living_standard_tec_assimilation_unify_robots_tooltip:0 "This robotic species is being recycled into an main template §BMechanical Unit§!.\n\n$tec_loc_assimilation_type_cybernetic$\n$tec_loc_assimilation_fail_10$"
 	living_standard_tec_assimilation_unify_robots_tooltip_delayed:0 "§LIf we can assemble a robot, we can disassemble and reassemble others, and so, this mechanical entity will be redone.§!"
 
 	living_standard_tec_assimilation_unify_machines:0 "Unit Standardization"
-	living_standard_tec_assimilation_unify_machines_tooltip:0 "This mechanical species is being recycled into a main template §BMachine Unit§!.\n\n$tec_loc_assimilation_type_cybernetic$\n$tec_loc_assimilation_fail_15$"
+	living_standard_tec_assimilation_unify_machines_tooltip:0 "This mechanical species is being recycled into a main template §BMachine Unit§!.\n\n$tec_loc_assimilation_type_cybernetic$\n$tec_loc_assimilation_fail_10$"
 	living_standard_tec_assimilation_unify_machines_tooltip_delayed:0 "§LUnit under optimization process; Carcass renewed, circuits rewired, programming alleged to the collective.§!"
 
 	living_standard_tec_assimilation_cybernetic_t1:0 "Cybernetic Integration"
-	living_standard_tec_assimilation_cybernetic_t1_tooltip:0 "This organic species is being improved with §ECybernetic§! implants.\n\n$tec_loc_assimilation_type_cybernetic$\n$tec_loc_assimilation_fail_25$"
+	living_standard_tec_assimilation_cybernetic_t1_tooltip:0 "This organic species is being improved with §ECybernetic§! implants.\n\n$tec_loc_assimilation_type_cybernetic$\n$tec_loc_assimilation_fail_15$"
 	living_standard_tec_assimilation_cybernetic_t1_tooltip_delayed:0 "§LSolider. Improved. Speedier. Forcefuller.§!"
 
 	living_standard_tec_assimilation_cybernetic_t1_machine:0 "$living_standard_tec_assimilation_cybernetic_t1$"
-	living_standard_tec_assimilation_cybernetic_t1_machine_tooltip:0 "This organic species is being integrated within the collective with mandatory §ECybernetic§! implants.\n\n$tec_loc_assimilation_type_cybernetic$\n$tec_loc_assimilation_fail_25$"
+	living_standard_tec_assimilation_cybernetic_t1_machine_tooltip:0 "This organic species is being integrated within the collective with mandatory §ECybernetic§! implants.\n\n$tec_loc_assimilation_type_cybernetic$\n$tec_loc_assimilation_fail_15$"
 	living_standard_tec_assimilation_cybernetic_t1_machine_tooltip_delayed:0 "$living_standard_tec_assimilation_cybernetic_t1_tooltip_delayed$"
 
 	living_standard_tec_assimilation_cybernetic_t1_hive:0 "$living_standard_tec_assimilation_cybernetic_t1$"
-	living_standard_tec_assimilation_cybernetic_t1_hive_tooltip:0 "This organic species is being integrated within the collective with mandatory §ECybernetic§! implants.\n\n$tec_loc_assimilation_type_cybernetic$\n$tec_loc_assimilation_fail_25$"
+	living_standard_tec_assimilation_cybernetic_t1_hive_tooltip:0 "This organic species is being integrated within the collective with mandatory §ECybernetic§! implants.\n\n$tec_loc_assimilation_type_cybernetic$\n$tec_loc_assimilation_fail_15$"
 	living_standard_tec_assimilation_cybernetic_t1_hive_tooltip_delayed:0 "$living_standard_tec_assimilation_cybernetic_t1_tooltip_delayed$"
 
 	living_standard_tec_assimilation_cybernetic_t1_upgrade:0 "Cybernetic Upgrade"
@@ -1166,15 +1166,15 @@
 	living_standard_tec_assimilation_cybernetic_t1_upgrade_hive_tooltip_delayed:0 "$living_standard_tec_assimilation_cybernetic_t1_tooltip_delayed$"
 
 	living_standard_tec_assimilation_cybernetic_t2:0 "Ulterior Integration"
-	living_standard_tec_assimilation_cybernetic_t2_tooltip:0 "This organic species is being augmented with §EAdvanced Cybernetics§!.\n\n$tec_loc_assimilation_type_cybernetic$\n$tec_loc_assimilation_fail_25$"
+	living_standard_tec_assimilation_cybernetic_t2_tooltip:0 "This organic species is being augmented with §EAdvanced Cybernetics§!.\n\n$tec_loc_assimilation_type_cybernetic$\n$tec_loc_assimilation_fail_15$"
 	living_standard_tec_assimilation_cybernetic_t2_tooltip_delayed:0 "§LDefinitive augmentations on perfected bodies, improved efficiency and determination over natural failure and randomness.§!"
 
 	living_standard_tec_assimilation_cybernetic_t2_machine:0 "$living_standard_tec_assimilation_cybernetic_t2$"
-	living_standard_tec_assimilation_cybernetic_t2_machine_tooltip:0 "This organic species is being integrated in the collective with §EAdvanced Cybernetics§!.\n\n$tec_loc_assimilation_type_cybernetic$\n$tec_loc_assimilation_fail_25$"
+	living_standard_tec_assimilation_cybernetic_t2_machine_tooltip:0 "This organic species is being integrated in the collective with §EAdvanced Cybernetics§!.\n\n$tec_loc_assimilation_type_cybernetic$\n$tec_loc_assimilation_fail_15$"
 	living_standard_tec_assimilation_cybernetic_t2_machine_tooltip_delayed:0 "$living_standard_tec_assimilation_cybernetic_t2_tooltip_delayed$"
 
 	living_standard_tec_assimilation_cybernetic_t2_hive:0 "$living_standard_tec_assimilation_cybernetic_t2$"
-	living_standard_tec_assimilation_cybernetic_t2_hive_tooltip:0 "This organic species is being integrated in the collective with §EAdvanced Cybernetics§!.\n\n$tec_loc_assimilation_type_cybernetic$\n$tec_loc_assimilation_fail_25$"
+	living_standard_tec_assimilation_cybernetic_t2_hive_tooltip:0 "This organic species is being integrated in the collective with §EAdvanced Cybernetics§!.\n\n$tec_loc_assimilation_type_cybernetic$\n$tec_loc_assimilation_fail_15$"
 	living_standard_tec_assimilation_cybernetic_t2_hive_tooltip_delayed:0 "$living_standard_tec_assimilation_cybernetic_t2_tooltip_delayed$"
 
 	living_standard_tec_assimilation_cybernetic_t2_upgrade:0 "Ulterior Upgrade"
@@ -1226,11 +1226,11 @@
 	living_standard_tec_assimilation_genetic_total_tooltip_delayed:0 "§LSophisticated genetic therapies will completely overwrite defective genetic data of this species, erasing impurities and making them be perfect, like us.§!"
 
 	living_standard_tec_assimilation_genetic_add:0 "Genetic Perfection"
-	living_standard_tec_assimilation_genetic_add_tooltip:0 "This organic species is getting §HGenetically Perfected§!.\n\n$tec_loc_assimilation_type_organic$\n$tec_loc_assimilation_fail_10$"
+	living_standard_tec_assimilation_genetic_add_tooltip:0 "This organic species is getting §HGenetically Perfected§!.\n\n$tec_loc_assimilation_type_organic$\n$tec_loc_assimilation_fail_15$"
 	living_standard_tec_assimilation_genetic_add_tooltip_delayed:0 "$living_standard_tec_assimilation_genetic_total_tooltip_delayed$"
 
 	living_standard_tec_assimilation_genetic_add_hive:0 "Genetic Perfection"
-	living_standard_tec_assimilation_genetic_add_hive_tooltip:0 "This organic species is getting §HGenetically Perfected§!.\n\n$tec_loc_assimilation_type_organic$\n$tec_loc_assimilation_fail_10$"
+	living_standard_tec_assimilation_genetic_add_hive_tooltip:0 "This organic species is getting §HGenetically Perfected§!.\n\n$tec_loc_assimilation_type_organic$\n$tec_loc_assimilation_fail_15$"
 	living_standard_tec_assimilation_genetic_add_hive_tooltip_delayed:0 "$living_standard_tec_assimilation_genetic_total_tooltip_delayed$"
 
 	living_standard_tec_assimilation_biopsionic_total:0 "Integrate Purification"
@@ -1238,11 +1238,11 @@
 	living_standard_tec_assimilation_biopsionic_total_tooltip_delayed:0 "§LBody and soul tailored together to resemble the purest of all forms, us.§!"
 
 	living_standard_tec_assimilation_biopsionic_add:0 "Merciful Purification"
-	living_standard_tec_assimilation_biopsionic_add_tooltip:0 "This organic species is getting §HPurified§! both psionic and biologically.\n\n$tec_loc_assimilation_type_biopsionic$\n$tec_loc_assimilation_fail_10$"
+	living_standard_tec_assimilation_biopsionic_add_tooltip:0 "This organic species is getting §HPurified§! both psionic and biologically.\n\n$tec_loc_assimilation_type_biopsionic$\n$tec_loc_assimilation_fail_15$"
 	living_standard_tec_assimilation_biopsionic_add_tooltip_delayed:0 "§LBody and soul tailored together to reach truly purity.§!"
 
 	living_standard_tec_assimilation_biopsionic_add_hive:0 "Merciful Purification"
-	living_standard_tec_assimilation_biopsionic_add_hive_tooltip:0 "This organic species is getting §HPurified§! both psionic and biologically.\n\n$tec_loc_assimilation_type_biopsionic$\n$tec_loc_assimilation_fail_10$"
+	living_standard_tec_assimilation_biopsionic_add_hive_tooltip:0 "This organic species is getting §HPurified§! both psionic and biologically.\n\n$tec_loc_assimilation_type_biopsionic$\n$tec_loc_assimilation_fail_15$"
 	living_standard_tec_assimilation_biopsionic_add_hive_tooltip_delayed:0 "§LBody and soul tailored together to reach truly purity.§!"
 
 	living_standard_tec_assimilation_cyberpsionic:0 "Imbued Augmentation"
@@ -1294,15 +1294,15 @@
 	living_standard_tec_assimilation_biological_decompose_tooltip_delayed:0 "§LInferior lifeforms only serve as a primordial soup, as mere vessels of potential good traits we need to sort and locate, the rest is just waste, inert biomatter we need to properly dispose of.§!"
 
 	living_standard_tec_assimilation_psychic:0 "Psychic Awakening"
-	living_standard_tec_assimilation_psychic_tooltip:0 "This species is discovering its natural §MPsychic§! potential."
+	living_standard_tec_assimilation_psychic_tooltip:0 "This species is discovering its natural §MPsychic§! potential.\n\n$tec_loc_assimilation_type_psychic$\n$tec_loc_assimilation_fail_10$"
 	living_standard_tec_assimilation_psychic_tooltip_delayed:0 "§LOur minds are incredible tools we have yet to fully understand, but the sheer power we have discovered as ours will be a tool we need to understand, together.§!"
 
 	living_standard_tec_assimilation_psychic_psionics:0 "Psychic Attunement"
-	living_standard_tec_assimilation_psychic_psionics_tooltip:0 "This species is replacing its psionic connection with strong §MPsychic§! manifestations."
+	living_standard_tec_assimilation_psychic_psionics_tooltip:0 "This species is replacing its psionic connection with strong §MPsychic§! manifestations.\n\n$tec_loc_assimilation_type_psychic$\n$tec_loc_assimilation_fail_15$"
 	living_standard_tec_assimilation_psychic_psionics_tooltip_delayed:0 "§LWe do not depend on external forces or dimensions for our power, our sheer will drives us forward and now they will understand too.§!"
 
 	living_standard_tec_assimilation_psychic_hivemind:0 "Psychic Entanglement"
-	living_standard_tec_assimilation_psychic_hivemind_tooltip:0 "This species is being §MPsychically Entangled§! with the collective."
+	living_standard_tec_assimilation_psychic_hivemind_tooltip:0 "This species is being §MPsychically Entangled§! with the collective.\n\n$tec_loc_assimilation_type_psychic$\n$tec_loc_assimilation_fail_10$"
 	living_standard_tec_assimilation_psychic_hivemind_tooltip_delayed:0 "§LThe collective will absorb the psychic potential of any individual, they will be part of our great mind, they will contribute and be one.§!"
 
 	living_standard_tec_assimilation_bionic:0 "REPLACE_ME"
