--- a/localisation/english/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/zz_evolved_ascension_l_english.yml
@@ -967,6 +967,7 @@ tech_reverse_advanced_dome: " "
 	situation_tec_psionic_path_t2_stage_2:0 "II"
 	situation_tec_psionic_path_t2_stage_3:0 "III"
 	situation_tec_psionic_path_t2_stage_4:0 "IV"
+	situation_tec_psionic_path_t2_stage_5:0 "V"
 
 	situation_approach_tec_psionic_path_t2_slow:0 "Stoic Ascendance"
 	situation_approach_tec_psionic_path_t2_slow_tooltip:0 "We must tackle this power with responsibility and time"
