--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -230,6 +230,13 @@
 # /
 # Setting tied
  # --------------- Solarpunk
+ # --------------- Solarpunk
+ # --------------- Solarpunk
+ # --------------- Cyberpunk
+
+ # --------------- Biopunk
+
+ # --------------- Solarpunk
 	civic_tec_foundation_solarpunk:0 "§B£tec_civic_foundation£§!Solarpunk Utopia"
 	civic_tec_foundation_solarpunk_desc:0 "TO DO"
 	civic_tec_foundation_solarpunk_tooltip:0 "§E['concept_tec_foundation_civic']§!\n\nTO DO"
@@ -241,12 +248,12 @@
 	civic_tec_foundation_machine_solarpunk_tooltip:0 "§E['concept_tec_foundation_civic']§!\n\nTO DO"
 	# Changes capital and some building art
 	# Can terraform and create utopian buildings
-
+ # --------------- Fallen empire
 	civic_tec_foundation_fallen:0 "§B£tec_civic_foundation£§!Fallen In Grace"
 	civic_tec_foundation_fallen_desc:0 "TO DO"
 	civic_tec_foundation_fallen_tooltip:0 "§E['concept_tec_foundation_civic']§!\n\nTO DO"
 	# Pseudo FE
-
+ # --------------- Machine+normal empire mix
 	civic_tec_foundation_synth_coop:0 "§B£tec_civic_foundation£§!Synthetic Coexistance"
 	civic_tec_foundation_synth_coop_desc:0 "TO DO"
 	civic_tec_foundation_synth_coop_tooltip:0 "§E['concept_tec_foundation_civic']§!\n\nTO DO"
@@ -254,11 +261,10 @@
 
 
  # --------------- TO DO
-	civic_tec_foundation_TODO:0 "§B£tec_civic_foundation£§!Solarpunk Utopia"
+	civic_tec_foundation_TODO:0 "§B£tec_civic_foundation£§!TO DO"
 	civic_tec_foundation_TODO_desc:0 "TO DO"
 	civic_tec_foundation_TODO_tooltip:0 "§E['concept_tec_foundation_civic']§!\n\nTO DO"
-	# Changes capital and some building art
-	# Can terraform and create utopian buildings
+	# 1
 # /
 
 # Origin TIED Civics
