Finished tech weights

--- a/localisation/english/!!_mod_compo_l_english.yml
+++ b/localisation/english/!!_mod_compo_l_english.yml
@@ -1146,18 +1146,23 @@
  job_pd_scrap_tech_drone: "REPLACE_ME"
  job_pd_scrap_tech_drone_plural: "REPLACE_ME"
  job_pd_scrap_tech_drone_desc: "REPLACE_ME"
+ job_pd_scrap_tech_drone_effect_desc: "REPLACE_ME"
  job_crucible_foundry: "REPLACE_ME"
  job_crucible_foundry_plural: "REPLACE_ME"
  job_crucible_foundry_desc: "REPLACE_ME"
+ job_crucible_foundry_effect_desc: "REPLACE_ME"
  job_crucible_alloy_drone: "REPLACE_ME"
  job_crucible_alloy_drone_plural: "REPLACE_ME"
  job_crucible_alloy_drone_desc: "REPLACE_ME"
+ job_crucible_alloy_drone_effect_desc: "REPLACE_ME"
  job_crucible_fabricator: "REPLACE_ME"
  job_crucible_fabricator_plural: "REPLACE_ME"
  job_crucible_fabricator_desc: "REPLACE_ME"
+ job_crucible_fabricator_effect_desc: "REPLACE_ME"
  job_pd_scrap_tech: "REPLACE_ME"
  job_pd_scrap_tech_plural: "REPLACE_ME"
  job_pd_scrap_tech_desc: "REPLACE_ME"
+ job_pd_scrap_tech_effect_desc: "REPLACE_ME"
  job_giga_interstellar_researcher: "REPLACE_ME"
  job_giga_interstellar_researcher_plural: "REPLACE_ME"
  job_giga_interstellar_researcher_desc: "REPLACE_ME"
