--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -459,6 +459,14 @@
 			policy_option_fanatic_tec_materialist_eng_voidcraft_name:0 "$policy_option_tec_materialist_eng_voidcraft$"
 			policy_option_fanatic_tec_materialist_eng_voidcraft_desc:0 "$policy_option_tec_materialist_generalist_description$"
 
+			policy_option_tec_materialist_ai_cheating:0 "AI Tutor Focus"
+			policy_option_tec_materialist_ai_cheating_name:0 "$policy_option_tec_materialist_cheating_ai$"
+			policy_option_tec_materialist_ai_cheating_desc:0 "$policy_option_tec_materialist_generalist_description$"
+
+			policy_option_fanatic_tec_materialist_ai_cheating:0 "$policy_option_tec_materialist_ai_cheating$"
+			policy_option_fanatic_tec_materialist_ai_cheating_name:0 "$policy_option_tec_materialist_cheating_ai$"
+			policy_option_fanatic_tec_materialist_ai_cheating_desc:0 "$policy_option_tec_materialist_generalist_description$"
+
 		#- Cooperative
 		# > Remove pop housing usage
 		# > Add "unemployed" social workers
