--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -1232,15 +1232,19 @@ policy_goods_policy:0 "Consumer Goods Production"
  policy_researchfocus_introspective_policy_desc:0 "As a Collective, research efforts must be focused to ensure our continuous learning and self-improvement."
 
  researchfocus_balanced_introspe:0 "Balanced Research"
+ researchfocus_balanced_introspe_name:0 "$researchfocus_balanced_introspe$"
  researchfocus_balanced_introspe_desc:0 "For the development as a coherent mind, we must approach every kind of technology with the same thoroughnes and rigor.\n\n§EAll §Y$tec_loc_research_resources$§!  will be produced with no specific focus.§!"
 
  researchfocus_physics_introspe:0 "$tec_loc_physics$ Rush"
+ researchfocus_physics_introspe_name:0 "$researchfocus_physics_introspe$"
  researchfocus_physics_introspe_desc:0 "Discovering and dominating the principles that conform our universe will make us dominate and shape the reality itself.\n\n§EAll £physics£ §Yresearch§! will be produced way faster than £society£ £engineering£, which will be produced at a lower rate.§!"
 
  researchfocus_society_introspe:0 "£society£ Society Rush"
+ researchfocus_society_introspe_name:0 "$researchfocus_society_introspe$"
  researchfocus_society_introspe_desc:0 "There is no more important step than progressing as a collective, discovering new technology that will benefit further lines of research and will greatly benefit our growth.\n\n§EAll £society£ §Yresearch§! will be produced way faster than £physics£ £engineering£, which will be produced at a lower rate.§!"
 
  researchfocus_engineering_introspe:0 "$tec_loc_engineering$ Rush"
+ researchfocus_engineering_introspe_name:0 "$researchfocus_engineering_introspe$"
  researchfocus_engineering_introspe_desc:0 "Our imperative as collective is to create, to develop and to find a place in the universe, so our efforts to create and engine new vessels, new industry, new tools will be our way of proving we are worth of the knowledge that lies ahead.\n\n§EAll £engineering£ §Yresearch§! will be produced way faster than £physics£ £society£, which will be produced at a lower rate.§!"
 
 
@@ -1248,12 +1252,15 @@ policy_goods_policy:0 "Consumer Goods Production"
  policy_dronemaintenance_introspective_policy_desc:0 "Our Drones needs some comodities and tools to correctly develop assigned task, so we must provide our own."
 
  balanced_maintenance_introspective:0 "Regular Maintenance"
+ balanced_maintenance_introspective_name:0 "$balanced_maintenance_introspective$"
  balanced_maintenance_introspective_desc:0 "All drones will receive the necessarily strict equipment and comodities their task requires."
 
  shifted_maintenance_introspective:0 "Intensified Maintenance"
+ shifted_maintenance_introspective_name:0 "$shifted_maintenance_introspective$"
  shifted_maintenance_introspective_desc:0 "More resources means more approachs, and providing our drones with extra goods and tools for a faster and safer work will make us grow.\n\n§EAll drones will consume more §Y$tec_loc_amenities$§! but every planet will have more §Y$tec_loc_stability$§!.§!"
 
  intensified_maintenance_introspective:0 "Meticulous Maintenance"
+ intensified_maintenance_introspective_name:0 "$intensified_maintenance_introspective$"
  intensified_maintenance_introspective_desc:0 "Neither scarcity nor precariousness should be factors when it comes to suiting our drones with any tool that is necessary for them to carry out their work and have a dignified existence.\n\n§EAll drones will consume way more §Y$tec_loc_amenities$§! but every planet will have way more §Y$tec_loc_stability$§!.§!"
 
 
