Experimental ship changes

--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -1214,11 +1214,11 @@
 	living_standard_tec_assimilation_synthetic_digitalization_tooltip_delayed:0 "$living_standard_tec_assimilation_cybernetic_t2_digitalization_tooltip_delayed$"
 
 	living_standard_tec_assimilation_psionic:0 "Transcendent Awakening"
-	living_standard_tec_assimilation_psionic_tooltip:0 "This species is awakening to its §PPsionic§! potential.\n\n$tec_loc_assimilation_type_psionic$\n$tec_loc_assimilation_fail_10$"
+	living_standard_tec_assimilation_psionic_tooltip:0 "This species is awakening to its §MPsionic§! potential.\n\n$tec_loc_assimilation_type_psionic$\n$tec_loc_assimilation_fail_10$"
 	living_standard_tec_assimilation_psionic_tooltip_delayed:0 "§LThe veil is lifted, but the Shroud remains.§!"
 
 	living_standard_tec_assimilation_psionic_ascend:0 "Transcendent Emulsion"
-	living_standard_tec_assimilation_psionic_ascend_tooltip:0 "This species is finally unlocking its §PPsionic§! potential.\n\n$tec_loc_assimilation_type_psionic$\n$tec_loc_assimilation_fail_10$"
+	living_standard_tec_assimilation_psionic_ascend_tooltip:0 "This species is finally unlocking its §MPsionic§! potential.\n\n$tec_loc_assimilation_type_psionic$\n$tec_loc_assimilation_fail_10$"
 	living_standard_tec_assimilation_psionic_ascend_tooltip_delayed:0 "$living_standard_tec_assimilation_psionic_tooltip_delayed$"
 
 	living_standard_tec_assimilation_genetic_total:0 "Genetic Reshaping"
@@ -1246,19 +1246,19 @@
 	living_standard_tec_assimilation_biopsionic_add_hive_tooltip_delayed:0 "§LBody and soul tailored together to reach truly purity.§!"
 
 	living_standard_tec_assimilation_cyberpsionic:0 "Imbued Augmentation"
-	living_standard_tec_assimilation_cyberpsionic_tooltip:0 "This organic species is getting augmented with §PInfused Cybernetics§!.\n\n$tec_loc_assimilation_type_cyberpsionic$\n$tec_loc_assimilation_fail_25$"
+	living_standard_tec_assimilation_cyberpsionic_tooltip:0 "This organic species is getting augmented with §MInfused Cybernetics§!.\n\n$tec_loc_assimilation_type_cyberpsionic$\n$tec_loc_assimilation_fail_25$"
 	living_standard_tec_assimilation_cyberpsionic_tooltip_delayed:0 "§LOur technological advancements will surely improve the way we understand the universe, and so this species will also be augmented.§!"
 
 	living_standard_tec_assimilation_cyberpsionic_hive:0 "Imbued Augmentation"
-	living_standard_tec_assimilation_cyberpsionic_hive_tooltip:0 "This organic species is getting augmented with §PInfused Cybernetics§!.\n\n$tec_loc_assimilation_type_cyberpsionic$\n$tec_loc_assimilation_fail_25$"
+	living_standard_tec_assimilation_cyberpsionic_hive_tooltip:0 "This organic species is getting augmented with §MInfused Cybernetics§!.\n\n$tec_loc_assimilation_type_cyberpsionic$\n$tec_loc_assimilation_fail_25$"
 	living_standard_tec_assimilation_cyberpsionic_hive_tooltip_delayed:0 "§LOur technological advancements will surely improve the way we understand the universe, and so this species will also be augmented.§!"
 
 	living_standard_tec_assimilation_cyberpsionic_upgrade:0 "Imbued Upgrade"
-	living_standard_tec_assimilation_cyberpsionic_upgrade_tooltip:0 "This organic species is getting its §ECybernetic§! implants augmented towards §PInfused Cybernetics§!.\n\n$tec_loc_assimilation_type_cyberpsionic$\n$tec_loc_assimilation_fail_10$"
+	living_standard_tec_assimilation_cyberpsionic_upgrade_tooltip:0 "This organic species is getting its §ECybernetic§! implants augmented towards §MInfused Cybernetics§!.\n\n$tec_loc_assimilation_type_cyberpsionic$\n$tec_loc_assimilation_fail_10$"
 	living_standard_tec_assimilation_cyberpsionic_upgrade_tooltip_delayed:0 "$living_standard_tec_assimilation_cyberpsionic_tooltip_delayed$"
 
 	living_standard_tec_assimilation_cyberpsionic_upgrade_hive:0 "Imbued Upgrade"
-	living_standard_tec_assimilation_cyberpsionic_upgrade_hive_tooltip:0 "This organic species is getting its §ECybernetic§! implants augmented towards §PInfused Cybernetics§!.\n\n$tec_loc_assimilation_type_cyberpsionic$\n$tec_loc_assimilation_fail_10$"
+	living_standard_tec_assimilation_cyberpsionic_upgrade_hive_tooltip:0 "This organic species is getting its §ECybernetic§! implants augmented towards §MInfused Cybernetics§!.\n\n$tec_loc_assimilation_type_cyberpsionic$\n$tec_loc_assimilation_fail_10$"
 	living_standard_tec_assimilation_cyberpsionic_upgrade_hive_tooltip_delayed:0 "$living_standard_tec_assimilation_cyberpsionic_tooltip_delayed$"
 
 	living_standard_tec_assimilation_replicant_total:0 "Biomechanical Transubstantiation"
