--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -538,6 +538,7 @@
 	civic_tec_regular_arcane_crafters:0 "§H£tec_civic_ruler_add£§!Arcane Neoterism"
 	civic_tec_regular_arcane_crafters_desc:0 "['concept_tec_ruler_add_civic']\n\nTO DO."
 	civic_tec_regular_arcane_crafters_tooltip:0 "TO DO capitals add Arcaneoterics - arcaneoterics convert arcane artifacts into minor artifacts - artisans and foundry jobs produce arcane artifacts at a planet scale\n\n"
+	# Arcane crystals can either be converted into minor artifacts or used as planet modifier to boost a specific type of job
 
  # Elitist
 
