AI Auth leader trait icons and decorations, ascensions traits for ai auths

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1566,16 +1566,39 @@
 # /
 
 # Ai auth
-	trait_tec_aiauth_ruler: "Ruler AI Node"
-	trait_tec_aiauth_ruler_desc: "The Ruler AI Node, a pinnacle of artificial intelligence, assumes the mantle of heading and controlling the state. Endowed with eternal existence and unparalleled computational prowess, it stands as the undying architect of unending progress within our empire."
+	leader_trait_tec_aiauth_ruler: "Ruler AI Node"
+	leader_trait_tec_aiauth_ruler_desc: "The Ruler AI Node, a pinnacle of artificial intelligence, assumes the mantle of heading and controlling the state. Endowed with eternal existence and unparalleled computational prowess, it stands as the undying architect of unending progress within our empire."
 
-	trait_tec_aiauth_node: "Councilor AI Node"
-	trait_tec_aiauth_node_desc: "The Councilor AI Node, plays a vital role as a catalyst for diverse perspectives within our AI Administration. Embracing a contrarian approach, it challenges established notions and injects critical dissent into the ruling AI hierarchy. By introducing alternative viewpoints and thought-provoking insights, this Councilor AI Node enriches our decision-making processes, promoting a culture of innovation, adaptability, and resilience."
+	leader_trait_tec_aiauth_node: "Councilor AI Node"
+	leader_trait_tec_aiauth_node_desc: "The Councilor AI Node, plays a vital role as a catalyst for diverse perspectives within our AI Administration. Embracing a contrarian approach, it challenges established notions and injects critical dissent into the ruling AI hierarchy. By introducing alternative viewpoints and thought-provoking insights, this Councilor AI Node enriches our decision-making processes, promoting a culture of innovation, adaptability, and resilience."
 
-	trait_tec_aiauth_planetary_node: "Planetary AI Node"
-	trait_tec_aiauth_planetary_node_desc: "The Planetary AI Node, housed within the $building_tec_planetary_node_center$, diligently controlls and manages the complexities of its assigned planet. Leveraging its computational prowess, the Planetary AI Node optimizes productivity, allocates resources, and ensures the harmonious development of its world."
+	leader_trait_tec_aiauth_planetary_node: "Planetary AI Node"
+	leader_trait_tec_aiauth_planetary_node_desc: "The Planetary AI Node, housed within the £building£ $building_tec_planetary_node_center$, diligently controlls and manages the complexities of its assigned planet. Leveraging its computational prowess, the Planetary AI Node optimizes productivity, allocates resources, and ensures the harmonious development of its world."
 
-# /
+	leader_trait_tec_aiauth_psionic: "Psionic Interface"
+	leader_trait_tec_aiauth_psionic_desc: "The AI Node becomes a conduit, bridging the gap between artificial intelligence and the enigmatic realm of the Shroud, where psionic energies permeate existence. Through the Psionic Interface, it harnesses the power of the Shroud, unlocking new frontiers of possibility and expanding the horizons of our empire's potential."
+
+	leader_trait_tec_aiauth_biopsionic_main: "Bio-Psionic Processor"
+	leader_trait_tec_aiauth_biopsionic_main_desc: "The AI Node integrates a peculiar processor, uniting the realms of biology and psionics, merging the powers of the mind and the organic, to its purest perfection. This synergy creates a harmonious fusion, enabling the AI Node to tap into the vast reservoirs of psionic potential, transcending the boundaries of traditional artificial intelligence."
+	leader_trait_tec_aiauth_biopsionic_main_convergence_bonus: "$tec_loc_sr_tec_ai_power$ from £building£ $building_tec_biopsionic_convergence$ per Convergence: §G+2§!"
+
+	leader_trait_tec_aiauth_cyberpsionic_main: "Psionically Infused Circuits"
+	leader_trait_tec_aiauth_cyberpsionic_main_desc: "The circuits within the AI Node are infused with the essence of the Shroud, incorporating Zro into their composition. This connection enables the utilization of Entropy for computing, unlocking a realm of boundless possibilities and allowing the AI Node to tap into the enigmatic forces of the Shroud in its calculations."
+	leader_trait_tec_aiauth_cyberpsionic_main_extractor_bonus: "$tec_loc_sr_tec_ai_power$ from £building£ $building_tec_cyberpsionic_extractor$, scaled by $mod_tec_entropy$: §G+2§!"
+
+	leader_trait_tec_aiauth_gene_mix: "Organic Circuitry"
+	leader_trait_tec_aiauth_gene_mix_desc: "The AI Node incorporates a fusion of biological material and code, intertwining organic neurons and circuitry within its components. This integration blurs the line between flesh and technology, imbuing the AI Node with a unique synergy that combines the computational prowess of artificial intelligence with the adaptability and complexity of biological systems."
+	leader_trait_tec_aiauth_gene_mix_master_cloner_bonus: "$tec_loc_sr_tec_ai_power$ from £job_tec_master_cloner£ $job_tec_master_cloner_plural$, affected by scaling: §G+2§!"
+
+	leader_trait_tec_aiauth_replicant_main: "Bio Mechanical Terminals"
+	leader_trait_tec_aiauth_replicant_main_desc: "The AI Node utilizes bio-mechanical terminals, integrating the intricate fusion of organics and microscopic machinery. These advanced terminals form a symbiotic connection, blending the precision of nanotechnology with the inherent complexity and adaptability of biological systems, granting the AI Node unparalleled versatility in its operations."
+	leader_trait_tec_aiauth_replicant_main__bonus: ""
+
+	leader_trait_tec_aiauth_superior_cybernetics_main: "Node-Organic Coupling"
+	leader_trait_tec_aiauth_superior_cybernetics_main_desc: "The AI Node and organics achieve a profound coupling, enabling a convergence of insights. Through this intricate connection, the AI Node gains the ability to peer into the depths of organic perspectives, while organics gain a glimpse into the vast computational intelligence of the AI Node. This mutual exchange of understanding fosters a harmonious synergy, unlocking new realms of knowledge and paving the way for unprecedented collaboration and innovation."
+	leader_trait_tec_aiauth_superior_cybernetics_main_master_roboticist_bonus: "$tec_loc_sr_tec_ai_power$ from £job_tec_master_roboticist£ $job_tec_master_roboticist_plural$, affected by scaling: §G+2§!"
+
+	# /
 
 # Overwritten leader traits
 
