--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -192,7 +192,7 @@ tr_cybernetics_modular_cybernetics_machine_delayed:0 "$tr_cybernetics_modular_cy
  tr_synthetics_finish_tooltip:4 "£building£ Capitals provide §G+2§! extra £job_roboticist£ Passive Assembly."
 
  tr_synthetics_finish_machine:0 "$tr_synthetics_finish$"
- tr_synthetics_finish_machine_tooltip:4 "£building£ §HStandard Capitals§! provide §G+1§! extra £job_replicator£ Passive Assembly, and £building£ §HSpecialized Capitals§! increase their effects by a §G25%§!."
+ tr_synthetics_finish_machine_tooltip:4 "£building£ §HStandard Capitals§! provide §G+1§! extra £job_replicator£ Passive Assembly.\n£building£ §HSpecialized Capitals§! increase their effects by a §G25%§!."
 
  tr_synthetics_maintenance_protocols:0 "Reiterative Protocols"
  tr_synthetics_maintenance_protocols_tooltip:0 "Synthetic Leaders are less prone to §YFatal Flaws§!"
