--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -243,7 +243,7 @@ tec_jump_empty:0 "\n\n"
  job_commandante:0 "Commander"
  job_commandante_plural:0 "Commanders"
  job_commandante_desc:0 "An experienced military chief, either active or honorably discharged."
- job_commandante_effect_desc:0 "£job_commandante£ $job_commandante_plural$ increase §Y$tec_loc_navalcap_from_jobs§!, spawn §Y$tec_loc_defense_armies$§!, increase §Y$tec_loc_stability$§!, produces §Y$tec_loc_unity$§! and a small amount of §Y$tec_loc_amenities$§!."
+ job_commandante_effect_desc:0 "£job_commandante£ $job_commandante_plural$ increase §Y$tec_loc_navalcap_from_jobs$§!, spawn §Y$tec_loc_defense_armies$§!, increase §Y$tec_loc_stability$§!, produces §Y$tec_loc_unity$§! and a small amount of §Y$tec_loc_amenities$§!."
  mod_job_commandante_add:0 "$job_commandante$ Jobs"
  mod_job_commandante_per_pop:0 "§G+1§! $job_commandante$ Job per $VALUE$ Pops"
  mod_job_commandante_pop_short:0 "\n§G+1§! £mod_job_commandante_add£ per $VALUE$ £pop£"
