--- a/localisation/english/zz_evolved_modifiers_l_english.yml
+++ b/localisation/english/zz_evolved_modifiers_l_english.yml
@@ -5,6 +5,12 @@
 # ------------------------------------------------------------
 	mod_pop_job_naval_mult:0 "£mod_country_naval_cap_add£ $MOD_COUNTRY_NAVAL_CAP_ADD$ from £job£ Jobs"
 
+# ------------------------------------------------------------
+# Balancing modifiers
+# ------------------------------------------------------------
+ modifier_tec_fallen_empire_might:0 "Ancient Might"
+ modifier_tec_leviathan_might:0 "Leviathan Might"
+ modifier_tec_space_critter_might:0 "Hardened survivor"
 
 # ------------------------------------------------------------
 # ORIGIN Modifiers
