--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -3647,6 +3647,7 @@ mod_tec_admiral_negative_traits_add: "$admiral_with_icon$ $tec_max_negative_trai
 mod_tec_general_negative_traits_add: "$general_with_icon$  $tec_max_negative_traits$"
 mod_tec_governor_negative_traits_add: "$governor_with_icon$ $tec_max_negative_traits$"
 mod_tec_scientist_negative_traits_add: "$scientist_with_icon$ $tec_max_negative_traits$"
+mod_tec_aiauth_node_negative_traits_add: "$tec_loc_ai_node$ $tec_max_negative_traits$"
 
 mod_tec_ruler_only_councilor_traits: "$tec_loc_ruler_plural$ can only get $tec_loc_councilor_traits$"
 mod_tec_councilor_only_councilor_traits: "$tec_loc_councilor_plural$ can only get $tec_loc_councilor_traits$"
