--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -149,7 +149,7 @@
 	tec_loc_ruler_plural: "£ruler£ Rulers"
 	tec_loc_councilor: "£council£ Councilor"
 	tec_loc_councilor_plural: "£council£ Councilors"
-	tec_loc_idle_leader: "Idle Leader"
+	tec_loc_idle_leader: "£unemployment£ Idle Leader"
 
 	tec_loc_leader_icon:0 "£tec_leader£"
 	tec_loc_leader:0 "$tec_loc_leader_icon$ Leader"
@@ -159,6 +159,7 @@
 
 	tec_trait_bonuses_scale_with_skill: "§YTrait bonuses scale with §HLeader Skill§!§!"
 	tec_trait_upkeep_scale_with_skill: "§YTrait upkeep scale with §HLeader Skill§!§!"
+	tec_trait_upkeep_scale_with_negatives: "§YTrait upkeep scale with §RNegative Traits§! suppressed till now§!"
 
 # --------------------------- MACHINE COMPUTING POWER --------------------------------
 	TEC_PROCESSCAP_WINDOW_TITLE: "Processing Capacity"
