--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -10,10 +10,15 @@
 	council_agenda_agenda_tec_assembly_cloning_name:0 "Bolstered Bio-Printing"
 	council_agenda_agenda_tec_assembly_cloning_desc:0 "New techniques of organic reproduction and genetic weaving will improve the efficiency of our empire."
 	modifier_tec_agenda_tec_assembly_cloning_finish:0 "$council_agenda_agenda_tec_assembly_cloning_name$ $agenda_ref$"
-	modifier_tec_agenda_tec_assembly_cloning_finish_desc:0 "$council_agenda_agenda_tec_assembly_cloning_name$"
+	modifier_tec_agenda_tec_assembly_cloning_finish_desc:0 "$council_agenda_agenda_tec_assembly_cloning_desc$"
 
+    council_agenda_agenda_tec_aiauth_purge_traits_name: "AI Node Negative Behaviour Inhibition"
+    council_agenda_agenda_tec_aiauth_purge_traits_desc: "Through identifying negative behaviour in our AI Nodes, our empire can install limits in suppressing said behaviour, in exchange for more processing capacity being needed."
+    council_agenda_agenda_tec_aiauth_purge_traits_effect_desc:1 "Removes §HNegative Traits§! from £tec_ai_node£ AI Nodes.\nFor each Trait removed, lose §R$@agenda_gestalt_purge_traits_exp_change|0$§! experience.\n£tec_ai_node£ AI Nodes that had traits removed, get the §Y$leader_trait_tec_aiauth_negative_behaviour_inhibitor$§! trait which increases the upkeep of the AI Node."
+    modifier_agenda_tec_aiauth_purge_traits_finish: "$council_agenda_agenda_tec_aiauth_purge_traits_name$ $agenda_ref$"
+    modifier_agenda_tec_aiauth_purge_traits_finish_desc: "$council_agenda_agenda_tec_aiauth_purge_traits_desc$"
 
-	council_agenda_agenda_tec_assembly_robots_provide_robot_techs:0 "Provide the next £engineering£ §YRobotic§! Technology"
+    council_agenda_agenda_tec_assembly_robots_provide_robot_techs:0 "Provide the next £engineering£ §YRobotic§! Technology"
 	council_agenda_agenda_tec_assembly_robots_provide_powered_tech:0 "Progress towards £engineering£§Y$tech_powered_exoskeletons$§!: §G+$@agenda_award_tech_progress|0%$§!"
 	council_agenda_agenda_tec_assembly_robots_provide_workers_tech:0 "Progress towards £engineering£§Y$tech_robotic_workers$§!: §G+$@agenda_award_tech_progress|0%$§!"
 	council_agenda_agenda_tec_assembly_robots_provide_droids_tech:0 "Progress towards £engineering£§Y$tech_droid_workers$§!: §G+$@agenda_award_tech_progress|0%$§!"
